# labwork-5

./: .gitignore  main.py  pyproject.toml  readme.md
.github/workflows/: CI.yml  ci.yml
src/: main.py
tests/: algorytm_test.py
