[tool.poetry]
name = "labwork-5"
version = "0.1.0"
description = ""
authors = ["mironovmeow <71277890+mironovmeow@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "labwork_5"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
